<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name_custom">BHXH Mail</string>
    <string name="c_login">Đăng nhập</string>
    <string name="c_info_user">THÔNG TIN NGƯỜI DÙNG</string>
    <string name="c_imap">HOST IMAP</string>
    <string name="c_smtp">HOST SMTP</string>
    <string name="c_user">Người dùng:</string>
    <string name="c_user_hint">Người dùng</string>
    <string name="c_email">Hòm thư:</string>
    <string name="c_pass">Mật khẩu:</string>
    <string name="c_pass_2">Mật khẩu</string>
    <string name="c_ok">OK</string>
    <string name="c_search">Tìm kiếm</string>
    <string name="c_inbox">Hộp thư đến</string>
    <string name="c_attach">Thư đính kèm</string>
    <string name="c_attach_2">Đính kèm:</string>
    <string name="c_sended">Thư đã gửi</string>
    <string name="c_all_mail">Tất cả thư</string>
    <string name="c_spam">Thư rác</string>
    <string name="c_trash">Thùng rác</string>
    <string name="c_logout">Đăng xuất</string>
    <string name="c_logout_title">Đăng xuất BHXH Mail</string>
    <string name="c_file_download">Tệp tin tải về</string>
    <string name="c_setting">Cài đặt</string>
    <string name="c_address">Địa chỉ</string>
    <string name="c_option">Tùy chọn</string>
    <string name="c_request">Yêu cầu</string>
    <string name="c_acc">Tài khoản</string>
    <string name="c_login_imail">Đăng nhập iMail</string>
    <string name="c_logout_confirm">Bạn có thực sự muốn đăng xuất?</string>
    <string name="c_yes">Có</string>
    <string name="c_no">Không</string>
    <string name="c_to">Tới:</string>
    <string name="c_from">Từ:</string>
    <string name="c_attach_label">Đính kèm</string>
    <string name="c_cc">Cc:</string>
    <string name="c_subject">Chủ đề:</string>
    <string name="c_back">Back</string>
    <string name="c_move">Di chuyển</string>
    <string name="c_delete">Xóa</string>
    <string name="c_cancel">Bỏ qua</string>
    <string name="c_select">Chọn</string>
    <string name="c_deselect">Bỏ Chọn</string>
    <string name="c_reply">Trả lời</string>
    <string name="c_reply_all">Trả lời tất cả</string>
    <string name="c_forward">Chuyển</string>
    <string name="c_mark_as_read">Đánh dấu đã đọc</string>
    <string name="c_mark_as_unread">Đánh dấu chưa đọc</string>
    <string name="c_archive">Lưu trữ</string>
    <string name="c_copy">Sao chép</string>
    <string name="c_add_star">Gắn sao</string>
    <string name="c_delete_star">Bỏ sao</string>
    <string name="c_open">Mở</string>
    <string name="c_save">Lưu</string>
    <string-array name="c_day_of_month">
        <item>Chủ nhật</item>
        <item>Thứ 2</item>
        <item>Thứ 3</item>
        <item>Thứ 4</item>
        <item>Thứ 5</item>
        <item>Thứ 6</item>
        <item>Thứ 7</item>
    </string-array>
    <string name="setting">Cài đặt</string>
    <string name="setting_option">Tùy chọn</string>
    <string name="setting_language">Ngôn ngữ</string>
    <string name="setting_user_sign">Chữ ký người dùng</string>
    <string name="setting_sign_default">Gửi từ đi động của tôi</string>
    <string name="setting_app_info">Thông tin ứng dụng</string>
    <string name="setting_version">Phiên bản %s</string>
    <string name="setting_rate">Đánh giá ứng dụng</string>
    <string name="setting_feedback">Góp ý và báo lỗi</string>
    <string name="setting_licence">Chính sách bảo mật</string>
    <string name="subject_feedback">Feedback version %s</string>
    <string name="email_feedback">tuanpt@hanoi.vssic.gov.vn</string>
    <string-array name="languages_available">
        <item>English</item>
        <item>Tiếng Việt</item>
    </string-array>
    <string name="app_name">K-9 Mail</string>
    <string name="shortcuts_title">K-9 Accounts</string>
    <string name="unread_widget_label">K-9 Unread</string>
    <string name="remote_control_label">K-9 Mail remote control</string>
    <string name="remote_control_desc">Allows this application to control K-9 Mail activities and settings.</string>
    <string name="app_authors">Google, The K-9 Dog Walkers.</string>
    <string name="app_copyright_fmt">Copyright 2008-<xliff:g>%s</xliff:g> The K-9 Dog Walkers. Portions Copyright 2006-<xliff:g>%s</xliff:g> the Android Open Source Project.</string>
    <string name="app_license">Licensed under the Apache License, Version 2.0.</string>
    <string name="welcome_message_title">Welcome to K-9 Mail</string>
    <string name="accounts_welcome"><![CDATA[
<p>
K-9 Mail is a powerful free email client for Android.
</p><p>
Its improved features include:
</p>
<ul>
  <li>Push mail using IMAP IDLE</li>
  <li>Better performance</li>
  <li>Message refiling</li>
  <li>Email signatures</li>
  <li>Bcc-to-self</li>
  <li>Folder subscriptions</li>
  <li>All folder synchronization</li>
  <li>Return-address configuration</li>
  <li>Keyboard shortcuts</li>
  <li>Better IMAP support</li>
  <li>Saving attachments to SD</li>
  <li>Empty Trash</li>
  <li>Message sorting</li>
  <li>…and more</li>
</ul>
<p>
Please note that K-9 does not support most free Hotmail accounts and, like many mail clients, has
some quirks when talking to Microsoft Exchange.
</p><p>
Please submit bug reports, contribute new features and ask questions at
<a href="https://github.com/k9mail/k-9/">https://github.com/k9mail/k-9/</a>.
</p>
    ]]></string>
    <string name="default_signature"> Sent from my Android using BHXH Mail</string>
    <string name="account_delete_dlg_instructions_fmt">The account \"<xliff:g id="account">%s</xliff:g>\" will be removed from K-9 Mail.</string>
    <string name="account_recreate_dlg_instructions_fmt">All local data for \"<xliff:g id="account">%s</xliff:g>\" will be removed. Account settings will be retained.</string>
    <string name="account_clear_dlg_instructions_fmt">Local copies of messages in \"<xliff:g id="account">%s</xliff:g>\" will be removed. Account settings will be retained.</string>
    <string name="import_dialog_error_message">Please install a file manager to continue with this import.</string>
    <string name="open_market">Open Play Store</string>
    <string name="app_authors_fmt">Authors: <xliff:g id="app_authors">%s</xliff:g></string>
    <string name="app_revision_fmt">Revision Information: <xliff:g id="app_revision_url">%s</xliff:g></string>
    <string name="app_libraries">We\'re using the following third-party libraries: <xliff:g id="app_libraries_list">%s</xliff:g></string>
    <string name="app_emoji_icons">Emoji icons: <xliff:g id="app_emoji_icons_link">%s</xliff:g></string>
    <string name="read_attachment_label">read Email attachments</string>
    <string name="read_attachment_desc">Allows this application to read your Email attachments.</string>
    <string name="read_messages_label">read Emails</string>
    <string name="read_messages_desc">Allows this application to read your Emails.</string>
    <string name="delete_messages_label">Delete Emails</string>
    <string name="delete_messages_desc">Allows this application to delete your Emails.</string>
    <string name="about_title_fmt">About <xliff:g id="app_name">%s</xliff:g></string>
    <string name="accounts_title">Accounts</string>
    <string name="folders_title">Folders</string>
    <string name="advanced">Advanced</string>
    <string name="message_list_title"><xliff:g id="account">%s</xliff:g>:<xliff:g id="folder">%s</xliff:g> </string>
    <string name="compose_title_compose">Compose</string>
    <string name="compose_title_reply">Reply</string>
    <string name="compose_title_reply_all">Reply all</string>
    <string name="compose_title_forward">Forward</string>
    <string name="choose_folder_title">Choose Folder</string>
    <string name="status_loading_account_folder">Poll <xliff:g id="account">%s</xliff:g>:<xliff:g id="folder">%s</xliff:g><xliff:g id="progress">%s</xliff:g></string>
    <string name="status_loading_account_folder_headers">Fetching headers <xliff:g id="account">%s</xliff:g>:<xliff:g id="folder">%s</xliff:g><xliff:g id="progress">%s</xliff:g></string>
    <string name="status_sending_account">Sending <xliff:g id="account">%s</xliff:g><xliff:g id="progress">%s</xliff:g></string>
    <string name="status_processing_account">Proc <xliff:g id="account">%s</xliff:g>:<xliff:g id="command">%s</xliff:g><xliff:g id="progress">%s</xliff:g></string>
    <string name="folder_progress">\u0020<xliff:g id="completed">%s</xliff:g>/<xliff:g id="total">%s</xliff:g></string>
    <string name="status_next_poll">Next poll <xliff:g id="nexttime">%s</xliff:g></string>
    <string name="status_syncing_off">Syncing disabled</string>
    <string name="actionbar_selected"><xliff:g id="selection_count">%d</xliff:g> selected</string>
    <string name="next_action">Next</string>
    <string name="previous_action">Previous</string>
    <string name="okay_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="send_action">Send</string>
    <string name="send_again_action">Send Again</string>
    <string name="empty_subject">Subject is empty, click again to send anyway</string>
    <string name="select_action">Select</string>
    <string name="deselect_action">Deselect</string>
    <string name="reply_action">Reply</string>
    <string name="reply_all_action">Reply all</string>
    <string name="delete_action">Delete</string>
    <string name="archive_action">Archive</string>
    <string name="spam_action">Spam</string>
    <string name="forward_action">Forward</string>
    <string name="move_action">Move</string>
    <string name="single_message_options_action">Send…</string>
    <string name="refile_action">Refile…</string>
    <string name="done_action">Done</string>
    <string name="discard_action">Discard</string>
    <string name="save_draft_action">Save as draft</string>
    <string name="check_mail_action">Check mail</string>
    <string name="send_messages_action">Send messages</string>
    <string name="refresh_folders_action">Refresh folder list</string>
    <string name="filter_folders_action">Find folder</string>
    <string name="add_account_action">Add account</string>
    <string name="compose_action">Compose</string>
    <string name="search_action">Search</string>
    <string name="search_results">Search results</string>
    <string name="preferences_action">Settings</string>
    <string name="account_settings_action">Account settings</string>
    <string name="folder_settings_action">Folder settings</string>
    <string name="global_settings_action">Global settings</string>
    <string name="remove_account_action">Remove account</string>
    <string name="clear_pending_action">Clear pending actions (danger!)</string>
    <string name="mark_as_read_action">Mark as read</string>
    <string name="send_alternate_action">Share</string>
    <string name="send_alternate_chooser_title">Choose sender</string>
    <string name="flag_action">Add star</string>
    <string name="unflag_action">Remove star</string>
    <string name="copy_action">Copy</string>
    <string name="select_text_action">Select text</string>
    <string name="show_headers_action">Show headers</string>
    <string name="hide_headers_action">Hide headers</string>
    <plurals name="copy_address_to_clipboard">
        <item quantity="one">Address copied to clipboard</item>
        <item quantity="other">Addresses copied to clipboard</item>
    </plurals>
    <string name="message_view_theme_action_dark">Switch to dark theme</string>
    <string name="message_view_theme_action_light">Switch to light theme</string>
    <string name="account_setup_basics_email_hint">Email address</string>
    <string name="account_setup_basics_password_hint">Password</string>
    <string name="account_setup_basics_show_password">Show password</string>
    <string name="account_setup_basics_client_certificate">Use client certificate</string>
    <string name="client_certificate_advanced_options">Advanced options</string>
</resources>