<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/select"
        android:title="@string/c_select" />
    <item
        android:id="@+id/deselect"
        android:title="@string/c_deselect" />
    <item
        android:id="@+id/reply_all"
        android:title="@string/c_reply_all" />
    <!--<item-->
        <!--android:id="@+id/send_again"-->
        <!--android:title="@string/send_again_action" />-->
    <item
        android:id="@+id/reply"
        android:title="@string/c_reply" />
    <item
        android:id="@+id/forward"
        android:title="@string/c_forward" />
    <item
        android:id="@+id/delete"
        android:title="@string/c_delete" />
    <item
        android:id="@+id/mark_as_read"
        android:title="@string/c_mark_as_read" />
    <item
        android:id="@+id/mark_as_unread"
        android:title="@string/c_mark_as_unread" />
    <item
        android:id="@+id/archive"
        android:title="@string/c_archive" />
    <item
        android:id="@+id/move"
        android:title="@string/c_move" />
    <item
        android:id="@+id/copy"
        android:title="@string/c_copy" />
    <item
        android:id="@+id/flag"
        android:title="@string/c_add_star" />
    <item
        android:id="@+id/unflag"
        android:title="@string/c_delete_star" />
    <item
        android:id="@+id/spam"
        android:title="@string/c_spam" />
    <!--<item-->
    <!--android:id="@+id/same_sender"-->
    <!--android:title="@string/from_same_sender" />-->
    <!--<item-->
    <!--android:id="@+id/debug_delete_locally"-->
    <!--android:title="Debug / Clear message body"-->
    <!--/>-->
</menu>
