<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_gray"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include layout="@layout/common_title_bar" />

    <TextView
        style="@style/NormalText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp36"
        android:layout_marginLeft="@dimen/dp16"
        android:gravity="center_vertical"
        android:text="@string/setting_option"
        android:textAllCaps="true" />

    <android.support.v7.widget.CardView
        app:cardCornerRadius="0dp"
        android:background="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:orientation="vertical">

            <TextView
                style="@style/NormalText.Bold"
                android:id="@+id/setting_language"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp48"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:text="@string/setting_language" />

            <View style="@style/Divider" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp48"
                android:orientation="horizontal">

                <TextView
                    style="@style/NormalText.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:gravity="center_vertical"
                    android:text="@string/setting_user_sign" />

                <Switch
                    android:layout_marginRight="@dimen/dp16"
                    android:id="@+id/setting_user_sign"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:padding="@dimen/dp16"
                    android:textColor="@color/text_color"
                    style="@style/NormalText.Bold"
                    android:id="@+id/setting_sign"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:lines="1"
                    android:text="@string/setting_sign_default"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        style="@style/NormalText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp36"
        android:layout_marginLeft="@dimen/dp16"
        android:gravity="center_vertical"
        android:text="@string/setting_app_info"
        android:textAllCaps="true" />

    <android.support.v7.widget.CardView
        app:cardCornerRadius="0dp"
        android:background="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:orientation="vertical">

            <TextView
                style="@style/NormalText.Bold"
                android:id="@+id/setting_version"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp48"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:text="@string/setting_version" />

            <View style="@style/Divider" />

            <TextView
                style="@style/NormalText.Bold"
                android:id="@+id/setting_rate"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp48"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:text="@string/setting_rate" />

            <View style="@style/Divider" />

            <TextView
                style="@style/NormalText.Bold"
                android:id="@+id/setting_feedback"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp48"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:text="@string/setting_feedback" />

            <View style="@style/Divider" />

            <TextView
                style="@style/NormalText.Bold"
                android:id="@+id/setting_licence"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp48"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:text="@string/setting_licence" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>