<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp">

    <TextView
        android:id="@+id/view"
        style="@style/NormalText"
        android:layout_width="match_parent"
        android:paddingBottom="10dp"
        android:paddingTop="15dp"
        android:text="@string/c_open"
        android:textColor="@android:color/black" />

    <View style="@style/Divider" />

    <TextView
        android:id="@+id/download"
        style="@style/NormalText"
        android:layout_width="match_parent"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/c_save"
        android:textColor="@android:color/black" />

    <View style="@style/Divider" />

    <TextView
        android:id="@+id/attach_cancel"
        style="@style/NormalText"
        android:layout_width="match_parent"
        android:paddingBottom="15dp"
        android:paddingTop="10dp"
        android:text="@string/c_cancel"
        android:textColor="@android:color/black" />

</LinearLayout>
